[package]
name = "hbackend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "2.1.5", features = ["postgres"] }
uuid = { version = "1", features = ["v4", "serde"] }
actix-web = "4"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"