[package]
name = "hbackend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "2.1.5", features = ["sqlite", "r2d2"] }
uuid = { version = "1", features = ["v4", "serde"] }
actix-web = "4"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
shellexpand = "3.1.0"
dotenvy = "0.15.7"
env_logger = "0.11.3"
log = "0.4"
diesel_migrations = {version = "2.1.0" }
chrono = "0.4.37"
reqwest = { version = "0.12.2", features = ["json", "rustls-tls"] }
tokio = { version = "1.37.0", features = ["full"] }
qdrant-client = "1.8.0"
